--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^9.0.0
+  lottie: ^3.1.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
@@ -55,6 +56,8 @@ flutter:
   assets:
     - assets/images/onboarding_background.webp
     - assets/videos/splash.mp4
+    - assets/animation/loading.json
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
