finiah onboarding screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/onboarding_background.webp
+    - assets/images/
     - assets/videos/splash.mp4
     - assets/animation/loading.json
 
