--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^9.0.0
-  lottie: ^3.1.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
   flutter:
     sdk: flutter
   go_router: ^16.0.0
+  lottie: ^3.1.0
+  responsive_navigation_bar: ^5.0.2
   video_player: ^2.10.0
 
 dev_dependencies:
@@ -57,7 +58,6 @@ flutter:
     - assets/images/
     - assets/videos/splash.mp4
     - assets/animation/loading.json
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
