--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   device_preview: ^1.2.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   go_router: ^16.0.0
   lottie: ^3.1.0
   responsive_navigation_bar: ^5.0.2
