--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,3 +82,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/constants/
+  filename: assets.dart
+  field_prefix:
+  classname: AppImages
