--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.2.0
   go_router: ^16.0.0
   lottie: ^3.1.0
