--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cached_network_image: ^3.4.1
+  cloud_firestore: ^6.0.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
   dotted_border: ^2.0.0
+  firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
   flutter:
     sdk: flutter
