--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.2.0
+  get_it: ^8.2.0
   go_router: ^16.0.0
   lottie: ^3.1.0
   responsive_navigation_bar: ^5.0.2
