--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.0.0
   lottie: ^3.1.0
+  meta: ^1.16.0
   responsive_navigation_bar: ^5.0.2
   video_player: ^2.10.0
 
