--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,12 @@ dependencies:
   flutter_svg: ^2.2.0
   get_it: ^8.2.0
   go_router: ^16.0.0
+  http: ^1.5.0
+  image_picker: ^1.1.2
   lottie: ^3.1.0
   meta: ^1.16.0
   responsive_navigation_bar: ^5.0.2
+  uuid: ^4.5.1
   video_player: ^2.10.0
 
 dev_dependencies:
